--- a/Assignment/nbproject/private/private.properties
+++ b/Assignment/nbproject/private/private.properties
@@ -5,5 +5,5 @@ j2ee.server.home=D:/Programs/apache-tomcat-9.0.30
 j2ee.server.instance=tomcat90:home=D:\\Programs\\apache-tomcat-9.0.30
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/IExplorerBrowser
+selected.browser=Chrome.INTEGRATED
 user.properties.file=C:\\Users\\congt\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
