--- a/Assignment/nbproject/project.properties
+++ b/Assignment/nbproject/project.properties
@@ -29,7 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.sqljdbc4.jar=../../../PRJ321/sqljdbc4.jar
-file.reference.sqljdbc42.jar=..\\..\\ComputerManagement\\web\\WEB-INF\\lib\\sqljdbc42.jar
+file.reference.sqljdbc42.jar=web\\WEB-INF\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=true
