--- a/Assignment/nbproject/private/private.properties
+++ b/Assignment/nbproject/private/private.properties
@@ -1,10 +1,10 @@
 
-deploy.ant.properties.file=C:\\Users\\SE140866\\AppData\\Roaming\\NetBeans\\8.2rc\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\congt\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
 j2ee.server.domain=C:/Users/SE140866/AppData/Roaming/NetBeans/8.2rc/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
+j2ee.server.home=D:/Programs/apache-tomcat-9.0.30
+j2ee.server.instance=tomcat90:home=D:\\Programs\\apache-tomcat-9.0.30
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\SE140866\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=C:\\Users\\congt\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
